--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -17,6 +17,8 @@
     <br>
     {% if sales_df %}
         {{ sales_df|safe }}
+        <br>
+        {{ positions_df|safe }}
     {% else %}
         <h3>No data</h3>
     {% endif %}
