--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -21,6 +21,8 @@
         {{ positions_df|safe }}
         <br>
         {{ merged_df|safe }}
+        <br>
+        {{ df|safe }}
     {% else %}
         <h3>No data</h3>
     {% endif %}
