15.Charts-Matplot-Seaborn

--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -23,6 +23,8 @@
         {{ merged_df|safe }}
         <br>
         {{ df|safe }}
+        <br>
+        <img src="data:image/png;base64, {{ chart|safe }}">
     {% else %}
         <h3>No data</h3>
     {% endif %}
