--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_filters %}
 
+{% block scripts %}
+    <script src="{% static 'sales/home.js' %}" defer></script>
+{% endblock %}
 
 {% block title %}
     Home
