--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -11,6 +11,25 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Modal -->
+    <div class="modal fade" id="reportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <h1>Hello there</h1>
     <hr>
     <form action="" method="POST">
@@ -28,8 +47,13 @@
         <br>
         {{ df|safe }}
         <br>
-        <img src="data:image/png;base64, {{ chart|safe }}">
+        <img src="data:image/png;base64, {{ chart|safe }}" id="img">
     {% else %}
         <h3>No data</h3>
     {% endif %}
+    <div>
+        <button class="btn btn-primary not-visible" id="report-btn" data-bs-toggle="modal"
+                data-bs-target="#reportModal">Add report
+        </button>
+    </div>
 {% endblock %}
