--- a/sales/templates/sales/home.html
+++ b/sales/templates/sales/home.html
@@ -16,15 +16,16 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Add Report</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="modal-body" id="modal-body">
+                    <div id="alert-box"></div>
+                    <form action="" id="report-form">
+                        {% csrf_token %}
+                        {{ report_form|crispy }}
+                        <button type="submit" class="btn btn-info mt-3">Save</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -34,7 +35,7 @@
     <hr>
     <form action="" method="POST">
         {% csrf_token %}
-        {{ form|crispy }}
+        {{ search_form|crispy }}
         <button type="submit" class="btn btn-primary mt-2">Search</button>
     </form>
     <br>
