--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- favicon -->
-    {#    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>#}
+        <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
 
     <!-- Bootstrap CSS -->
     <!-- CSS only -->
@@ -18,8 +18,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" defer></script>
 
     <!-- Dropzone js -->
-    {#    <link rel="stylesheet" href="{% static 'dropzone.css' %}">#}
-    {#    <script src="{% static 'dropzone.js' %}" defer></script>#}
+        <link rel="stylesheet" href="{% static 'dropzone.css' %}">
+        <script src="{% static 'dropzone.js' %}" defer></script>
 
     <!-- Custom js & css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
